22.03 - retornando os dados estatisticos de lancamento por categoria